src/log/build_2022-07-15_03-36-15/img_basics/stdout_stderr.log
running egg_info
writing ../build/img_basics/img_basics.egg-info/PKG-INFO
writing dependency_links to ../build/img_basics/img_basics.egg-info/dependency_links.txt
writing entry points to ../build/img_basics/img_basics.egg-info/entry_points.txt
writing requirements to ../build/img_basics/img_basics.egg-info/requires.txt
writing top-level names to ../build/img_basics/img_basics.egg-info/top_level.txt
reading manifest file '../build/img_basics/img_basics.egg-info/SOURCES.txt'
writing manifest file '../build/img_basics/img_basics.egg-info/SOURCES.txt'
running build
running build_py
copying img_basics/cam_sub.py -> /home/ubuntu/nemo_ws/src/build/img_basics/build/lib/img_basics
running install
running install_lib
copying /home/ubuntu/nemo_ws/src/build/img_basics/build/lib/img_basics/cam_sub.py -> /home/ubuntu/nemo_ws/src/install/img_basics/lib/python3.8/site-packages/img_basics
byte-compiling /home/ubuntu/nemo_ws/src/install/img_basics/lib/python3.8/site-packages/img_basics/cam_sub.py to cam_sub.cpython-38.pyc
  File "/home/ubuntu/nemo_ws/src/install/img_basics/lib/python3.8/site-packages/img_basics/cam_sub.py", line 60
    def main(args=None):
    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/ubuntu/nemo_ws/src/install/img_basics/lib/python3.8/site-packages/img_basics-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../build/img_basics/img_basics.egg-info to /home/ubuntu/nemo_ws/src/install/img_basics/lib/python3.8/site-packages/img_basics-0.0.0-py3.8.egg-info
running install_scripts
Installing img_subscriber script to /home/ubuntu/nemo_ws/src/install/img_basics/lib/img_basics
writing list of installed files to '/home/ubuntu/nemo_ws/src/build/img_basics/install.log'
